# FiSynth

./: .gitignore  .gitmodules  CMakeLists.txt
Source/: EnvelopeEditor.cpp  EnvelopeEditor.h  EnvelopeModel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.h
